--- a/body/README
+++ b/body/README
@@ -45,6 +45,9 @@ from body.search_names_2 (5) import search_names
 from body.searching_prices3 (6) import search_prices  # импорт функции создания словаря с игрой и ее ценой
 from body.sorting_posts (3) import sell_posts_list  # импорт списка постов
 
+!!! после пункта 7 был и выполнялся пункт 8 SQL_fill_tabs. Но я его поменял на SQL_fill_tabs2
 
-8. SQL_fill_tabs Модуль для заполнения таблиц для каждой игры.
-Импортирует словарь из словарей игр с ценами из модуля body.games_dict (7)
+8. SQL.SQL_fill_tabs2 Модуль для заполнения таблиц для каждой игры.
+Заполняет столбцы с датой, ценой, и текстом поста.
+Импортирует словарь из словарей игр с ценами из модуля body.searching_prices4 (???)
+!!! необходимо создавать таблицы только с играми (пустых таблиц создавать не надо)
