--- a/body/README
+++ b/body/README
@@ -1,5 +1,14 @@
 
-TeseraTop1000 получает json-файлы по 15 игр из Топ Тесеры
+1.TeseraTop1000 получает json-файлы по 15 игр из Топ Тесеры
+
+2. body\fromTop15toTop900
+Объединяет файлы по 15 игр в один файл
+
+3. body\fill_missing_keys
+Заполняет словарь недостающими парами
+
+4. SQL\SQL_Top_Tesera3
+Создает базу игр по ТОП Тесеры (без дубликатов)
 
 read_json модуль забирает первое слово из названия игры Тесеры.
 Полные названия игр в json-файлах по 15 игр с Топ Тесеры.
@@ -29,21 +38,17 @@ from body.sorting_posts (3) import sell_posts_list
 
 
 5. body.search_names_2
-Сравнивает первые слова названий из постов БНИ со списком первых слов из названий игр из Топ Тесеры.
-Затем сравнивает вторые слова
-from body.filter_3 (4) import filter_2, get_strings
+Функция filter22 выполняет поиск максимального совпадения названия игры БНИ с названием игр Тесеры.
+(Сравнивает первые слова названий из постов БНИ со списком первых слов из названий игр из Топ Тесеры.
+Затем сравнивает вторые слова)
+from body.filter_3 (4) import filter_22, get_strings
 
 
-6. body.searching_prices3
+6. body.searching_prices4
 Модуль выполняет поиск цен.
 Затем объединяет в словарь с названием игры.
 from body.sorting_posts (3) import sell_posts_list
 from body.search_names_2 (5) import search_names
-
-
-7. body.games_dict Модуль создания словаря из словарей игр с ценами
-from body.searching_prices3 (6) import search_prices  # импорт функции создания словаря с игрой и ее ценой
-from body.sorting_posts (3) import sell_posts_list  # импорт списка постов
 
 !!! после пункта 7 был и выполнялся пункт 8 SQL_fill_tabs. Но я его поменял на SQL_fill_tabs2
 
@@ -51,3 +56,12 @@ from body.sorting_posts (3) import sell_posts_list  # импорт списка 
 Заполняет столбцы с датой, ценой, и текстом поста.
 Импортирует словарь из словарей игр с ценами из модуля body.searching_prices4 (???)
 !!! необходимо создавать таблицы только с играми (пустых таблиц создавать не надо)
+
+Есть проблемы с поиском по буквам е и ё (Осквернённый грааль есть только в столбце title буквой ё)
+Нет игры Рюрик, Виконты Западного королевства, Фотосинтез, Покорение Марса. Миссия Арес
+
+
+Нужно сделать название игры в словаре игр full_dict по найденному соответствию между БНИ и Тесеры
+
+Проверить ошибки которые выводятся в консоль при выполнении SQL.SQL_fill_tabs2
+Убрать пробелы из цен
